crates/iroha_config_base_derive/tests/ui_fail/invalid_attrs_default_invalid_expr.stderr
error: expected a valid expression within `default = "<expr>"`, but couldn't parse it: unexpected token
 --> tests/ui_fail/invalid_attrs_default_invalid_expr.rs:5:24
  |
5 |     #[config(default = "not an expression I guess")]
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
